--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,21 @@
     <title>Books</title>
 </head>
 <body>
-    <h1>Classics Revisited</h1>
-    <h2>Discovering the Greatest Literary Books Ever Written</h2>
+    <main>
+        <div  class="HeroImg">
+            <div class="HeroText">
+                <h1 class="title1">Classics Revisited</h1>
+                <h2 class="title2">Discovering the Greatest Literary Books Ever Written</h1>
+            </div>
+        </div>
+    </main>
+    </div>
+
+<style>
+    
+
+
+</style>
     
 </html>
 
