--- a/blog.html
+++ b/blog.html
@@ -6,18 +6,40 @@
     <title>Books</title>
 </head>
 <body>
+    <h1 class="title1">Classics Revisited</h1>
+    <h2 class="title2">Discovering the Greatest Literary Books Ever Written</h2>
     <main>
         <div  class="HeroImg">
             <div class="HeroText">
-                <h1 class="title1">Classics Revisited</h1>
-                <h2 class="title2">Discovering the Greatest Literary Books Ever Written</h1>
+               <p>Literature is the heartbeat of human expression, a realm where words transform into powerful narratives that capture the essence of our existence.</p>
+               <br> Thus, literary books are the gems of this world, weaving intricate tales that challenge our perceptions, ignite our imaginations, and provoke deep reflection.</br>
+               <br>The following works invite readers to embark on unforgettable journeys, exploring the complexities of love, loss, identity, and the human condition—each page a doorway to new worlds and profound insights that linger long after the final chapter.</br>  
             </div>
         </div>
     </main>
     </div>
 
 <style>
+.HeroImg{
+    background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vecteezy.com%2Ffree-photos%2Fbook-wallpaper&psig=AOvVaw2MO_pbqRn96M3mUH4LfK1J&ust=1721135454314000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNip17mPqYcDFQAAAAAdAAAAABAE);
+    background-size:cover ;
+    background-position:50% ;
+    height:300px ;
+}
+body{
+    margin:0;
+    background-image: url(https://images.unsplash.com/photo-1684347417228-5d3c35df377d?fm=jpg&w=3000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 70% ;
+}
+.title1{
+    color:brown;
+    text-align:center;
+    border: 10px solid bisque;
+    background-color: bisque;
     
+}
 
 
 </style>
